# crypto-ai-bot

./: .context_history  .context_history.json  .cursorignore  .cursorrules  .editorconfig  .env.canary  .env.dev  .env.dev.example  .env.example  .env.live  .env.live.example  .env.local.example  .env.paper  .env.paper.example  .env.paper.live  .env.paper.local  .env.prod  .env.prod.example  .env.staging  .gitattributes  .gitignore  .mcp.json  48H_SOAK_TEST_COMPLETE_IMPLEMENTATION.md  A1-A5_COMPLETION_SUMMARY.md  A1_CONFIG_AUDIT_REPORT.md  A2_STAGING_FLAGS_IMPLEMENTATION.md  A3_STAGING_PUBLISHER_READY.md  A4_SOAK_TEST_GUIDE.md  A4_SOAK_TEST_RESULTS.md  ACQUIRE_ANNUAL_SNAPSHOT_METHODOLOGY.md  ACQUIRE_SUBMISSION_PACKAGE.md  ACQUIRE_SUBMISSION_QUICKSTART.md  ACQUIRE_SUBMISSION_REPORT.md  ANNUAL_SNAPSHOT_RESULTS_SUMMARY.md  API_SURFACE_IMPROVEMENTS.md  ARCHITECTURE.md  AUTOTUNE_FULL_QUICKSTART.md  AUTOTUNE_FULL_SUMMARY.md  AUTOTUNE_QUICKSTART.md  B1_3_MONITORING_COMPLETE.md  (+304 more)
.claude/: settings.local.json
_legacy/: README.md
agents/: __init__.py  adaptive_regime_router.py  alert_handler.py  arbitrage_hunter.py  drawdown_protector.py  flash_loan_advisor.py  flashloan_executor.py  langchain_agent.py  macro_analyzer.py  multi_exchange_signal_generator.py  news_reactor.py  risk_manager.py  sentiment_model.py  signal_analyst.py  strategy_router.py  whale_watcher.py
ai_engine/: __init__.py  adaptive_learner.py  events.py  flash_loan_advisor.py  global_context.py  liquidations_tracker.py  schemas.py  signals.py  strategy_selector.py  whale_detection.py
analysis/: __init__.py  metrics_summary.py
api/: Dockerfile  main.py  requirements.txt
backtest/: __init__.py  models.py  risk_evaluator.py  runner.py  simulator.py
backtesting/: __init__.py  bar_reaction_engine.py  data_loader.py  engine.py  metrics.py  microreactor_engine.py  prd_acceptance_criteria.py  prd_backtest_runner.py  prd_data_provider.py  prd_metrics_calculator.py  run_backtest.py
backtests/: __init__.py  exporter.py  metrics.py  runner.py  schema.py
base/: __init__.py  enhanced_trading_agent.py  strategy.py  trading_agent.py
cli/: scalper_cli.py
config/: CONFIG_USAGE.md  README.md  README_AGENT_CONFIG.md  README_AGENT_CONFIG_ENHANCED.md  __init__.py  agent_config_manager.py  agent_integration.py  agent_settings.yaml  bar_reaction_5m.yaml  bar_reaction_5m_aggressive.yaml  bar_reaction_5m_baseline.yaml  bar_reaction_5m_current.yaml  bar_reaction_5m_debug.yaml  bar_reaction_5m_optimized.yaml  bar_reaction_5m_synthetic_test.yaml  base_config.py  config_loader.py  dynamic_sizing.yaml  enhanced_scalper_config.backup.1762606221.yaml  enhanced_scalper_config.yaml  enhanced_scalper_loader.py  events_config.yaml  flashloan_advanced.yaml  init__.py  live_scalper_config.yaml  loader.py  merge_config.py  microstructure_config.py  ml_models.yaml  mode_aware_streams.py  multi_pair_scalper_config.yaml  optimized_config_loader.py  overnight_config_manager.py  overnight_momentum_config.yaml  performance_metrics.yaml  prd_config_hot_reload.py  prd_config_validator.py  protection_mode.yaml  protection_mode_controller.py  regime_map.yaml  (+18 more)
contracts/: FlashArb.sol
core/: protection_mode.py
data-room/: README.md  makepdfs.md  package-lock.json  package.json  print.css
deprecated/: README.md
diagnostics/: __init__.py  check_redis_streams.py  kraken.py  paper_test_run.py  test_signals_pnl.py
docker/: Dockerfile  entrypoint.sh
docs/: AGENTS_OVERVIEW.md  ARCHITECTURE.md  ARCH_ENGINE_OVERVIEW.md  ATR_RISK_MODEL.md  CI-CD.md  CI_PIPELINE.md  CLEANUP_BASELINE.md  DUE_DILIGENCE_CHECKLIST.md  ENGINE-RUNBOOK.md  ENGINE_24_7_IMPROVEMENTS.md  ENHANCED_SCALPER_README.md  ENVIRONMENT_MATRIX.md  FLYIO_PRODUCTION_DEPLOYMENT.md  GO_LIVE_CONTROLS.md  LIQUIDITY_FILTERS.md  LOCAL_DEVELOPMENT_SETUP.md  ML_FEATURES.md  ML_SYSTEM_COMPLETE.md  OPERATIONS.md  PARAMETER_OPTIMIZATION.md  PNL_BACKFILL.md  PNL_MONITORING.md  PNL_PIPELINE.md  PNL_VERIFICATION.md  PRD-001-CHECKLIST.md  PRD-001-CRYPTO-AI-BOT.md  PRD-004-ML-ENSEMBLE.md  PRD-PLATFORM-AI-PREDICTED-SIGNALS.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SKELETON.md  README-ARCH.md  README.md  REGIME_GATES.md  RISK_GATES.md  RUNBOOK_ENGINE.md  SAFETY_CONTROLS.md  SECURITY_TRANSFER.md  SETUP_GUIDE.md  SIGNAL_METHODOLOGY.md  SMOKE_TESTS.md  (+23 more)
engine/: __init__.py  loop.py
examples/: golive_integration_example.py  quick_start_clean_imports.py
exchange/: __init__.py  base_adapter.py  ccxt_adapter.py  ccxt_pro_adapter.py  errors.py  exchange_factory.py  exchange_registry.py  multi_exchange_streamer.py  rate_limiter.py  ws_adapter.py
flash_loan_system/: __init__.py  execution_optimizer.py  historical_analyzer.py  opportunity_scorer.py  profitability_simulator.py
indicators/: __init__.py  atr.py  bollinger_bands.py  ema.py  macd.py  rsi.py  sma.py  volume_profile.py
infra/: OBSERVABILITY.md  __init__.py  metrics.py
infrastructure/: __init__.py
market_data/: __init__.py  base.py  binance_feed.py  config.py  kraken_feed.py  ohlcv_aggregator.py  orchestrator.py  price_engine.py
mcp/: README.md  __init__.py  context.py  errors.py  keys.py  marshaling.py  mocks.py  redis_client.py  redis_manager.py  schemas.py
shared_contracts/: README.md  pyproject.toml
shared_contracts/shared_contracts/: __init__.py
shared_contracts/shared_contracts/canonical/: __init__.py  execution_decision.py  market_snapshot.py  strategy.py  trade.py  trade_intent.py
shared_contracts/shared_contracts/pipeline/: __init__.py  protocol.py
shared_contracts/tests/: __init__.py  test_contracts.py  test_immutability.py  test_roundtrip.py
(+1059 files in other folders)
