[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ai-bot"
version = "0.5.0"
description = "OmniCrypto AI Bot: multi-agent crypto trading system with Redis, Kraken, MCP, and AI strategy modules."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Maithamali Jiwan"}
]
requires-python = ">=3.10,<3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["crypto", "trading", "ai", "bot", "redis", "kraken", "mcp"]

[project.urls]
Homepage = "https://github.com/maithamali/crypto-ai-bot"
Repository = "https://github.com/maithamali/crypto-ai-bot"
Documentation = "https://github.com/maithamali/crypto-ai-bot#readme"
Issues = "https://github.com/maithamali/crypto-ai-bot/issues"

[project.scripts]
crypto-ai-bot = "main:cli"

# --- Core & Config ---
dependencies = [
  "ccxt==4.4.98",
  "python-dotenv==1.1.1",
  "pydantic==2.11.9",
  "pydantic-settings==2.10.1",
  "pyyaml==6.0.2",
  "orjson==3.11.1",
  "requests==2.32.4",
  "tenacity==9.1.2",

  # Redis / Streams / Realtime
  "redis==5.0.8",
  "websockets==15.0.1",

  # Async stack
  "aiohttp==3.12.15",
  "aiodns==3.5.0",
  "aiohappyeyeballs==2.6.1",
  "aiosignal==1.4.0",
  "async-timeout==4.0.3",
  "attrs==25.3.0",
  "frozenlist==1.7.0",
  "multidict==6.6.3",
  "yarl==1.20.1",

  # Numerical / Data
  "numpy==2.1.3",
  "pandas==2.3.1",
  "scipy==1.15.2",

  # TA & Modeling
  "ta-lib==0.6.4",
  "ta==0.11.0",
  "scikit-learn==1.7.1",
  "xgboost==3.0.3",
  "joblib==1.5.1",
  "statsmodels==0.14.5",

  # Observability / CLI
  "prometheus-client==0.22.1",
  "rich==14.1.0",
  "click==8.2.1",
  "psutil==7.0.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "uvicorn==0.35.0",
  "starlette==0.47.2",
  "sse-starlette==3.0.2",

  # MCP / LLM hooks
  "mcp==1.12.4",
  "openai==1.99.6",
  "httpx==0.28.1",

  # Agent framework bits you already use
  "autogen-agentchat==0.7.4",
  "autogen-core==0.7.4",
  "fastmcp==2.12.0",
  "langgraph==0.6.6",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "coverage[toml]==7.10.6",
  "mypy==1.18.1",
  "pytest==8.4.2",
  "pytest-asyncio==0.23.6",
  "pytest-cov==7.0.0",
  "ruff==0.13.0",
]
viz = [
  "matplotlib==3.10.1",
  "plotly==6.3.0",
  "seaborn==0.13.2",
]
sentiment = [
  "praw==7.8.1",
  "vadersentiment==3.3.2",
  "yfinance==0.2.65",
  "fredapi==0.5.2",
]
web3 = ["web3==7.13.0"]
agent = [
  "autogen-agentchat==0.7.4",
  "autogen-core==0.7.4",
  "fastmcp==2.12.0",
  "langgraph==0.6.6",
]
rag = [
  "llama-index-core==0.12.0",
]

# --------------------------
# Setuptools configuration
# --------------------------
[tool.setuptools]
# We are using a flat-layout (no src/). Tell setuptools to look in "."
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
# Explicitly include your top-level packages; adjust if you add/remove dirs.
include = [
  "agents*",
  "ai_engine*",
  "base*",
  "config*",
  "flash_loan_system*",
  "mcp*",
  "models*",
  "monitoring*",
  "orchestrator_package*",
  "short_selling*",
  "strategies*",
  "test_models*",
]
exclude = ["tests*", "scripts*", "notebooks*"]

# Ship non-.py assets bundled with packages
[tool.setuptools.package-data]
"*" = [
  "*.yaml", "*.yml", "*.ini", "*.env",
  "*.json", "*.txt", "*.csv", "*.md",
  "*.pkl", "*.joblib",
  "*.docx"
]

# ---- Tooling ----
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]